// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkboxes 1`] = `
{
  "content": "# Housework

## Main

- [x] Dishes
- [ ] Cleaning the bathroom
- [x] Change the light bulbs
- [ ] something else

## [x] should it works on titles?

## [x] idk if it should!

### [ ] test

### [x] test

- [x] test
- [x] test


## [x] only works on list items is better
\`\`\`
[ ] this is not a checkbox either
\`\`\`
",
  "contentLineOffset": 0,
  "features": {
    "hljs": true,
  },
  "root": {
    "children": [
      {
        "children": [
          {
            "children": [],
            "content": "<svg width="16" height="16" viewBox="0 -3 24 24"><path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"></path></svg> Dishes",
            "payload": {
              "lines": "4,5",
            },
          },
          {
            "children": [],
            "content": "<svg width="16" height="16" viewBox="0 -3 24 24"><path fill-rule="evenodd" d="M6 5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1zM3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3v-5z" clip-rule="evenodd"></path></svg> Cleaning the bathroom",
            "payload": {
              "lines": "5,6",
            },
          },
          {
            "children": [],
            "content": "<svg width="16" height="16" viewBox="0 -3 24 24"><path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"></path></svg> Change the light bulbs",
            "payload": {
              "lines": "6,7",
            },
          },
          {
            "children": [],
            "content": "<svg width="16" height="16" viewBox="0 -3 24 24"><path fill-rule="evenodd" d="M6 5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1zM3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3v-5z" clip-rule="evenodd"></path></svg> something else",
            "payload": {
              "lines": "7,9",
            },
          },
        ],
        "content": "Main",
        "payload": {
          "lines": "2,3",
        },
      },
      {
        "children": [],
        "content": "<svg width="16" height="16" viewBox="0 -3 24 24"><path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"></path></svg> should it works on titles?",
        "payload": {
          "lines": "9,10",
        },
      },
      {
        "children": [
          {
            "children": [],
            "content": "<svg width="16" height="16" viewBox="0 -3 24 24"><path fill-rule="evenodd" d="M6 5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1zM3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3v-5z" clip-rule="evenodd"></path></svg> test",
            "payload": {
              "lines": "13,14",
            },
          },
          {
            "children": [
              {
                "children": [],
                "content": "<svg width="16" height="16" viewBox="0 -3 24 24"><path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"></path></svg> test",
                "payload": {
                  "lines": "17,18",
                },
              },
              {
                "children": [],
                "content": "<svg width="16" height="16" viewBox="0 -3 24 24"><path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"></path></svg> test",
                "payload": {
                  "lines": "18,21",
                },
              },
            ],
            "content": "<svg width="16" height="16" viewBox="0 -3 24 24"><path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"></path></svg> test",
            "payload": {
              "lines": "15,16",
            },
          },
        ],
        "content": "<svg width="16" height="16" viewBox="0 -3 24 24"><path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"></path></svg> idk if it should!",
        "payload": {
          "lines": "11,12",
        },
      },
      {
        "children": [
          {
            "children": [],
            "content": "<pre><code data-lines="22,25"><span class="hljs-string">[ ]</span> <span class="hljs-keyword">this</span> <span class="hljs-keyword">is</span> <span class="hljs-keyword">not</span> a checkbox either
</code></pre>",
            "payload": {
              "lines": "22,25",
            },
          },
        ],
        "content": "<svg width="16" height="16" viewBox="0 -3 24 24"><path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"></path></svg> only works on list items is better",
        "payload": {
          "lines": "21,22",
        },
      },
    ],
    "content": "Housework",
    "payload": {
      "lines": "0,1",
    },
  },
}
`;

exports[`content with frontmatter 1`] = `
{
  "content": "
- l1
  - l1.1
  - l1.2
    - l1.2.1
",
  "contentLineOffset": 4,
  "features": {},
  "frontmatter": {
    "markmap": {
      "color": [
        "blue",
      ],
    },
  },
  "root": {
    "children": [
      {
        "children": [],
        "content": "l1.1",
        "payload": {
          "lines": "2,3",
        },
      },
      {
        "children": [
          {
            "children": [],
            "content": "l1.2.1",
            "payload": {
              "lines": "4,5",
            },
          },
        ],
        "content": "l1.2",
        "payload": {
          "lines": "3,5",
        },
      },
    ],
    "content": "l1",
    "payload": {
      "lines": "1,5",
    },
  },
}
`;

exports[`content with line endings of CRLF 1`] = `
{
  "content": "
- l1
  - l1.1
  - l1.2
    - l1.2.1
",
  "contentLineOffset": 4,
  "features": {},
  "frontmatter": {
    "markmap": {
      "color": [
        "blue",
      ],
    },
  },
  "root": {
    "children": [
      {
        "children": [],
        "content": "l1.1",
        "payload": {
          "lines": "2,3",
        },
      },
      {
        "children": [
          {
            "children": [],
            "content": "l1.2.1",
            "payload": {
              "lines": "4,5",
            },
          },
        ],
        "content": "l1.2",
        "payload": {
          "lines": "3,5",
        },
      },
    ],
    "content": "l1",
    "payload": {
      "lines": "1,5",
    },
  },
}
`;

exports[`content without frontmatter 1`] = `
{
  "content": "- l1
  - l1.1
  - l1.2
    - l1.2.1
",
  "contentLineOffset": 0,
  "features": {},
  "root": {
    "children": [
      {
        "children": [],
        "content": "l1.1",
        "payload": {
          "lines": "1,2",
        },
      },
      {
        "children": [
          {
            "children": [],
            "content": "l1.2.1",
            "payload": {
              "lines": "3,4",
            },
          },
        ],
        "content": "l1.2",
        "payload": {
          "lines": "2,4",
        },
      },
    ],
    "content": "l1",
    "payload": {
      "lines": "0,4",
    },
  },
}
`;

exports[`custom url provider 1`] = `
{
  "scripts": [],
  "styles": [
    {
      "data": {
        "href": "/local/@highlightjs/cdn-assets@undefined/styles/default.min.css",
      },
      "type": "stylesheet",
    },
  ],
}
`;

exports[`images 1`] = `
{
  "content": "![](image1.png)

![](image2.png)
",
  "contentLineOffset": 0,
  "features": {},
  "root": {
    "children": [
      {
        "children": [],
        "content": "<img src="image1.png" alt="">",
      },
      {
        "children": [],
        "content": "<img src="image2.png" alt="">",
      },
    ],
    "content": "",
  },
}
`;

exports[`links - target=_blank 1`] = `
{
  "content": "## heading 1

- [Google](https://www.google.com)
",
  "contentLineOffset": 0,
  "features": {},
  "root": {
    "children": [
      {
        "children": [],
        "content": "<a href="https://www.google.com" target="_blank">Google</a>",
        "payload": {
          "lines": "2,3",
        },
      },
    ],
    "content": "heading 1",
    "payload": {
      "lines": "0,1",
    },
  },
}
`;

exports[`magic comments 1`] = `
{
  "content": "## heading 1 <!-- markmap: fold -->

- 1 <!-- markmap: foldAll -->
  - 1.1
  - 1.2
- 2
  - 2.1
  - 2.2
",
  "contentLineOffset": 0,
  "features": {},
  "root": {
    "children": [
      {
        "children": [
          {
            "children": [],
            "content": "1.1",
            "payload": {
              "lines": "3,4",
            },
          },
          {
            "children": [],
            "content": "1.2",
            "payload": {
              "lines": "4,5",
            },
          },
        ],
        "content": "1",
        "payload": {
          "fold": 2,
          "lines": "2,5",
        },
      },
      {
        "children": [
          {
            "children": [],
            "content": "2.1",
            "payload": {
              "lines": "6,7",
            },
          },
          {
            "children": [],
            "content": "2.2",
            "payload": {
              "lines": "7,8",
            },
          },
        ],
        "content": "2",
        "payload": {
          "lines": "5,8",
        },
      },
    ],
    "content": "heading 1",
    "payload": {
      "fold": 1,
      "lines": "0,1",
    },
  },
}
`;

exports[`plugins 1`] = `
{
  "scripts": [],
  "styles": [
    {
      "data": {
        "href": "https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@undefined/styles/default.min.css",
      },
      "type": "stylesheet",
    },
  ],
}
`;

exports[`tables 1`] = `
{
  "content": "| products | price |
|-|-|
| apple | 10 |
| banana | 12 |
",
  "contentLineOffset": 0,
  "features": {},
  "root": {
    "children": [],
    "content": "<table data-lines="0,4">
<thead data-lines="0,1">
<tr data-lines="0,1">
<th>products</th>
<th>price</th>
</tr>
</thead>
<tbody data-lines="2,4">
<tr data-lines="2,3">
<td>apple</td>
<td>10</td>
</tr>
<tr data-lines="3,4">
<td>banana</td>
<td>12</td>
</tr>
</tbody>
</table>",
    "payload": {
      "lines": "0,4",
    },
  },
}
`;
